# service-broker

./: CMakeLists.txt
include/communication/: Combiner.hpp  Concat.hpp  ContextBase.hpp  Log.hpp  Service.hpp  ServiceBroker.hpp  WorkerBase.hpp  WorkerMultiThreaded.hpp  WorkerSingleThreaded.hpp  Workers.hpp
include/communication/detail/: contains_type.hpp  convert_to_tuple.hpp  get_element_by_type.hpp  noncopyable.hpp  to_function.hpp  traits.hpp  tuple_util.hpp  type_constraints.hpp
src/: communication.cpp
test/: CMakeLists.txt  concat_test.cpp  multithreaded_worker_test.cpp  service_broker_test.cpp  worker_test.cpp
